--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>LINE風CHAT</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<link rel="stylesheet" href="/Firebase-RealtimeDatabase/css/reset.css">
-<link rel="stylesheet" href="/Firebase-RealtimeDatabase/css/style.css">
+<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
 </head>
 <body>
@@ -44,7 +44,7 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
     // Your web app's Firebase configuration
     const firebaseConfig = {
-        apiKey: "AIzaSyBNUmXC-Av0tA1JRrtdgEeLcFczLhznZYY",
+        apiKey: "",
         authDomain: "chat-gs004.firebaseapp.com",
         projectId: "chat-gs004",
         storageBucket: "chat-gs004.appspot.com",
